force-app/main/default/objects/sumoapp__Location__c/sumoapp__Location__c.object-meta.xml
<CustomObject>
    <label>SUMO Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>