force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__AddressText__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AddressText__c</fullName>
    <label>Address(Text)</label>
    <type>TextArea</type>
</CustomField>