force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__AddressVoice__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__AddressVoice__c</fullName>
    <label>Address(Voice)</label>
    <type>TextArea</type>
</CustomField>