force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Area__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>sumoapp__Area__c</referenceTo>
    <relationshipLabel>Area Locations</relationshipLabel>
    <relationshipName>AreaLocations</relationshipName>
    <type>Lookup</type>
</CustomField>