force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__City__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>