force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Country__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>