force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Description__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Description__c</fullName>
    <label>Location Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>