force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Fax__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>