force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>