force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__IsActive__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>You can only schedule appointments into active locations.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>