force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Phone__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>