force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Promotion__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Promotion__c</fullName>
    <label>Promotion</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>