force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__State__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__State__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>