force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Street__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>