force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Website__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>