force-app/main/default/objects/sumoapp__Location__c/fields/sumoapp__Zipcode__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Zipcode__c</fullName>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>