force-app/main/default/objects/sumoapp__Location__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__Street__c</columns>
    <columns>sumoapp__City__c</columns>
    <columns>sumoapp__State__c</columns>
    <columns>sumoapp__Zipcode__c</columns>
    <columns>sumoapp__Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Locations</label>
</ListView>